--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -34,13 +34,13 @@
         </tbody>
         </table>
         <hr />
-        <a class="btn btn-primary" th:if="${userSid} != null" type="button" onClick="insertBoard()" role="button">글쓰기</a>
+        <a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="insertBoard()" role="button">글쓰기</a>
 
 
         <nav aria-label="Page navigation">
           <ul class="pagination justify-content-center">
             <li id="pagefirst">
-				<a th:href="'?boardtype=' + ${boardType} + '&page=0'">
+				<a th:href="'?boardtype=' + ${boardtype} + '&page=0'">
 					<span class="page-link">«</span>
 				</a>
 			</li>
@@ -50,7 +50,7 @@
 				</a>
 			</li>
 			<li class="page-item" style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
-				<a class="page-link" th:href="'?boardtype=' + ${boardType} + '&page=' + ${num}" th:text="${num+1}"></a>
+				<a class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
 			</li>
 			<li id="pageNext">
 				<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
@@ -58,10 +58,10 @@
 				</a>
 			</li>
 			<li>
-				<a th:if="${board.getTotalPages()}>0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()-1}">
+				<a th:if="${board.getTotalPages()}>0" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${board.getTotalPages()-1}">
 					<span class="page-link">»</span>
 				</a>
-				<a th:if="${board.getTotalPages()}==0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()}">
+				<a th:if="${board.getTotalPages()}==0" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${board.getTotalPages()}">
 					<span class="page-link">»</span>
 				</a>
 			</li>
